# dynamic-metabolic-state

./: .gitignore  papers.md  pyproject.toml
glucose_model/: main.py
glucose_model/data/: dataset.py  preprocess.py
glucose_model/model/: absorption.py  dynamics.py  metabolic_state.py  model.py  parameters.py  simulator.py
glucose_model/nbs/: explore.ipynb
glucose_model/training/: loss.py  train.py  train_step.py
glucose_model/utils/: config.yaml  init_params.py
nbs/: explore.ipynb  live_mode2_pipeline_minimal.ipynb  mode2_online_bayesian_meal_identification_real_data.ipynb
scripts/: broad_at_prior_diagnostic.py
