[project]
name = "dynamic-metabolic-state"
version = "0.1.0"
description = "Context-aware mechanistic glucose modeling"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "ipykernel",
    "diffrax>=0.7.2",
    "statsmodels>=0.14.6",
    "optax>=0.2.8",
    "pyyaml>=6.0.3",
]
