[project]
name = "dynamic-metabolic-state"
version = "0.1.0"
description = "Context-aware mechanistic glucose modeling"
readme = "README.md"
requires-python = "==3.11.*"

dependencies = [
    "numpy<2",
    "scipy<1.11",
    "jax==0.4.23",
    "optax==0.1.7",
    "diffrax==0.4.1",
    "pandas",
    "matplotlib",
    "seaborn",
    "ipykernel",
    "statsmodels>=0.14.6",
    "pyyaml>=6.0.3",
    "jaxlib==0.4.23",
]
